--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body style = "background-image:url('images/github3.jpg'); background-size: 100%">
 <h2 ALIGN=CENTER>Hello Ezhaannn!!!</h2>
-<h3 ALIGN=CENTER>THE IS PROJECT-1</h3>
+<h3 ALIGN=CENTER>THE IS PROJECT-1!!!</h3>
 </body>
 </html>
